8316130: Incorrect control in LibraryCallKit::inline_native_notify_jvmti_funcs